--- a/index.html
+++ b/index.html
@@ -1,13 +1,58 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset='utf-8'>
-		<title></title>
-		<link rel='stylesheet' href='css/main.css'>
-		<script src='js/app.js'></script>
-		<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-	</head>
-	<body>
 
-	</body>
+<head>
+    <meta charset='utf-8'>
+    <title>CV Paweł Kłeczek</title>
+    <link rel='stylesheet' href='css/main.css'>
+    <script src='js/app.js'></script>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+</head>
+
+<body>
+    <div class="baba_z_radomia">
+        <header>
+
+
+            <div class="stol">
+
+
+                <div class="col-2">
+                </div>
+                <div class="col-8">
+                    <h1>Paweł Kłeczek</h1>
+
+                </div>
+                <div class="col-2">
+                </div>
+            </div>
+        </header>
+        <main>
+            <div class="stol">
+                <div class="col-2">
+                </div>
+                <div class="col-8">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <div class="col-2">
+                </div>
+            </div>
+        </main>
+        <footer>
+            <div class="stol">
+                <div class="col-2">
+                </div>
+                <div class="col-8">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+                </div>
+                <div class="col-2">
+                </div>
+            </div>
+
+        </footer>
+    </div>
+</body>
+
 </html>
