Added containers for basic-info and links to social networks

--- a/index.html
+++ b/index.html
@@ -29,12 +29,34 @@
             <div class='stol'>
                 <div class='col-2'>
                 </div>
-                <div class='col-8'>
-                    <i class='fa fa-map-marker' aria-hidden='true'><span>Warsaw,PL</span></i>
-					<i class='fa fa-mobile' aria-hidden='true'><span>502631476</span></i>
-					<i class='fa fa-envelope' aria-hidden='true'><span>pa.vel.kleczek@gmail.com</span></i>
-					<i class='fa fa-code' aria-hidden='true'><span><a href='https://github.com/pawelkleczek' target='blank'>Github</a></span></i>
-                </div>
+                <div class='col-4 border-right'>
+					<div class="basic-info">
+						<i class='fa fa-map-marker' aria-hidden='true'></i> <span>Warsaw,PL</span>
+					</div>
+					<div class="basic-info">
+						<i class='fa fa-mobile' aria-hidden='true'></i>
+						<span>502631476</span>
+					</div>
+					<div class="basic-info">
+						<i class='fa fa-envelope' aria-hidden='true'></i>
+						<span>pa.vel.kleczek@gmail.com</span>
+					</div>
+				</div>
+
+				<div class='col-4'>
+					<div class="basic-info">
+						<i class='fa fa-facebook-official' aria-hidden='true'></i> <span><a href='https://www.facebook.com/pa.vel.kleczek' target='blank'>Facebook</a></span>
+					</div>
+					<div class="basic-info">
+						<i class='fa fa-github' aria-hidden='true'></i>
+						<span><a href='https://github.com/pawelkleczek' target='blank'>Github</a></span>
+					</div>
+					<div class="basic-info">
+						<i class="fa fa-linkedin" aria-hidden="true"></i>
+						<span><a href='https://www.linkedin.com/in/pawelkleczek/' target='blank'>Linked In</a></span>
+					</div>
+				</div>
+
                 <div class='col-2'>
                 </div>
             </div>
