--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <title>CV Paweł Kłeczek</title>
-	<link rel='stylesheet' href='font-awesome/css/font-awesome.min.css'>
+    <link rel='stylesheet' href='font-awesome/css/font-awesome.min.css'>
     <link rel='stylesheet' href='css/main.css'>
     <script src='js/app.js'></script>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
@@ -18,7 +18,7 @@
                 <div class='col-2'>
                 </div>
                 <div class='col-8'>
-					<h1><span>&lt;</span>Paweł Kłeczek <span>/&gt;</span></h1>
+                    <h1><span>&lt;</span>Paweł Kłeczek <span>/&gt;</span></h1>
                 </div>
                 <div class='col-2'>
                 </div>
@@ -29,36 +29,54 @@
             <div class='stol'>
                 <div class='col-2'>
                 </div>
-                <div class='col-4 border-right'>
-					<div class="basic-info">
-						<i class='fa fa-map-marker' aria-hidden='true'></i> <span>Warsaw,PL</span>
-					</div>
-					<div class="basic-info">
-						<i class='fa fa-mobile' aria-hidden='true'></i>
-						<span>502631476</span>
-					</div>
-					<div class="basic-info">
-						<i class='fa fa-envelope' aria-hidden='true'></i>
-						<span>pa.vel.kleczek@gmail.com</span>
-					</div>
-				</div>
-
-				<div class='col-4'>
-					<div class="basic-info">
-						<i class='fa fa-facebook-official' aria-hidden='true'></i> <span><a href='https://www.facebook.com/pa.vel.kleczek' target='blank'>Facebook</a></span>
-					</div>
-					<div class="basic-info">
-						<i class='fa fa-github' aria-hidden='true'></i>
-						<span><a href='https://github.com/pawelkleczek' target='blank'>Github</a></span>
-					</div>
-					<div class="basic-info">
-						<i class="fa fa-linkedin" aria-hidden="true"></i>
-						<span><a href='https://www.linkedin.com/in/pawelkleczek/' target='blank'>Linked In</a></span>
-					</div>
-				</div>
+                <div class='col-4'>
+                    <div class="basic-info">
+                        <i class='fa fa-map-marker' aria-hidden='true'></i> <span>Warsaw,PL</span>
+                    </div>
+                    <div class="basic-info">
+                        <i class='fa fa-mobile' aria-hidden='true'></i>
+                        <span>502631476</span>
+                    </div>
+                    <div class="basic-info">
+                        <i class='fa fa-envelope' aria-hidden='true'></i>
+                        <span>pa.vel.kleczek @ gmail.com</span>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="basic-info">
+                        <i class='fa fa-facebook-official' aria-hidden='true'></i> <span><a href='https://www.facebook.com/pa.vel.kleczek' target='blank'>Facebook</a></span>
+                    </div>
+                    <div class="basic-info">
+                        <i class='fa fa-github' aria-hidden='true'></i>
+                        <span><a href='https://github.com/pawelkleczek' target='blank'>Github</a></span>
+                    </div>
+                    <div class="basic-info">
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        <span><a href='https://www.linkedin.com/in/pawelkleczek/' target='blank'>Linked In</a></span>
+                    </div>
+                </div>
 
                 <div class='col-2'>
                 </div>
+            </div>
+            <div class="stol">
+                <div class="col-2">
+
+                </div>
+                <div class="col-8 skills">
+                    <i class="fa fa-connectdevelop" aria-hidden="true"></i>
+                    <h2>Projects</h2>
+                    <i class="fa fa-terminal" aria-hidden="true"></i>
+                    <h2>Skills</h2>
+                    <i class="fa fa-grav" aria-hidden="true"></i>
+                    <h2>Expertise</h2>
+                    <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                    <h2>Education</h2>
+                </div>
+                <div class="col-2">
+
+                </div>
+
             </div>
         </main>
         <footer>
