Further information and styling of skills area

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             </div>
 
         </header>
+		<hr>
         <main>
             <div class='stol'>
                 <div class='col-2'>
@@ -38,21 +39,21 @@
                         <span>502631476</span>
                     </div>
                     <div class="basic-info">
-                        <i class='fa fa-envelope' aria-hidden='true'></i>
-                        <span>pa.vel.kleczek @ gmail.com</span>
+                        <i class='fa fa-google' aria-hidden='true'></i>
+                        <span>pa.vel.kleczek@</span>
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="basic-info">
-                        <i class='fa fa-facebook-official' aria-hidden='true'></i> <span><a href='https://www.facebook.com/pa.vel.kleczek' target='blank'>Facebook</a></span>
+                        <i class='fa fa-facebook-official' aria-hidden='true'></i> <span><a href='https://www.facebook.com/pa.vel.kleczek' target='blank'>/pa.vel.kleczek</a></span>
                     </div>
                     <div class="basic-info">
                         <i class='fa fa-github' aria-hidden='true'></i>
-                        <span><a href='https://github.com/pawelkleczek' target='blank'>Github</a></span>
+                        <span><a href='https://github.com/pawelkleczek' target='blank'>/pawelkleczek</a></span>
                     </div>
                     <div class="basic-info">
                         <i class="fa fa-linkedin" aria-hidden="true"></i>
-                        <span><a href='https://www.linkedin.com/in/pawelkleczek/' target='blank'>Linked In</a></span>
+                        <span><a href='https://www.linkedin.com/in/pawelkleczek/' target='blank'>/in/pawelkleczek</a></span>
                     </div>
                 </div>
 
@@ -60,21 +61,65 @@
                 </div>
             </div>
             <div class="stol">
-                <div class="col-2">
-
-                </div>
-                <div class="col-8 skills">
-                    <i class="fa fa-connectdevelop" aria-hidden="true"></i>
-                    <h2>Projects</h2>
-                    <i class="fa fa-terminal" aria-hidden="true"></i>
-                    <h2>Skills</h2>
-                    <i class="fa fa-grav" aria-hidden="true"></i>
-                    <h2>Expertise</h2>
-                    <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-                    <h2>Education</h2>
-                </div>
-                <div class="col-2">
-
+                <div class="col-6 skills">
+					<div class="more-info">
+						<div class="skill-header">
+							<i class="fa fa-connectdevelop" aria-hidden="true"></i>
+                    		<h2>Projects</h2>
+						</div>
+						<ul>
+							<li>Twitch TV Api</li>
+							<li>Wikipedia Api</li>
+							<li>Weather  Api</li>
+							<li>Quote Machine</li>
+						</ul>
+					</div>
+					<div class="more-info">
+						<div class="skill-header">
+                    		<i class="fa fa-terminal" aria-hidden="true"></i>
+                    		<h2>Skills</h2>
+						</div>
+						<ul>
+							<li>HTML5</li>
+							<li>CSS3</li>
+							<li>Js (ES6)</li>
+							<li>Sass</li>
+							<li>React</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-6 skills">
+					<div class="more-info">
+						<div class="skill-header">
+	                	    <i class="fa fa-grav" aria-hidden="true"></i>
+	                	    <h2>Expertise</h2>
+						</div>
+						<ul>
+							<li>RWD</li>
+							<li>API</li>
+							<li>RegEx</li>
+							<li>UI/UX</li>
+						</ul>
+					</div>
+					<div class="more-info">
+						<div class="skill-header">
+							<i class="fa fa-graduation-cap" aria-hidden="true"></i>
+	                	    <h2>Education</h2>
+						</div>
+						<ul>
+							<li>CodersLab
+								<ul>
+							<li>Front-End Dev 2017</li>
+								</ul>
+							</li>
+							<li></li>
+							<li>Music Academy in Katowice
+								<ul>
+							<li>Jazz Guitar MD 2010</li>
+								</ul>
+							</li>
+						</ul>
+					</div>
                 </div>
 
             </div>
