--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
 <body>
     <div class='baba_z_radomia'>
         <header>
-
             <div class='stol'>
-                <div class='col-2'>
-                </div>
-                <div class='col-8'>
-                    <h1><span>&lt;</span>Paweł Kłeczek <span>/&gt;</span></h1>
-                </div>
-                <div class='col-2'>
-                </div>
+				<div class="col-2">
+				</div>
+	                <div class='col-6'>
+	                    <h1><span>&lt;</span>Paweł Kłeczek <span>/&gt;</span></h1>
+	                </div>
+					<div class="col-4">
+						<h2>front-end developer</h2>
+					</div>
             </div>
-
         </header>
-		<hr>
+
         <main>
             <div class='stol'>
                 <div class='col-2'>
@@ -40,7 +39,7 @@
                     </div>
                     <div class="basic-info">
                         <i class='fa fa-google' aria-hidden='true'></i>
-                        <span>pa.vel.kleczek@</span>
+                        <span><a href="mailto:pa.vel.kleczek@gmail.com?Subject=Praca%20front-end" target="_top">pa.vel.kleczek@</a></span>
                     </div>
                 </div>
                 <div class="col-4">
@@ -56,24 +55,25 @@
                         <span><a href='https://www.linkedin.com/in/pawelkleczek/' target='blank'>/in/pawelkleczek</a></span>
                     </div>
                 </div>
-
-                <div class='col-2'>
-                </div>
             </div>
             <div class="stol">
-                <div class="col-6 skills">
+				<div class="col-2">
+				</div>
+                <div class="col-4 skills">
 					<div class="more-info">
 						<div class="skill-header">
 							<i class="fa fa-connectdevelop" aria-hidden="true"></i>
                     		<h2>Projects</h2>
 						</div>
 						<ul>
-							<li>Twitch TV Api</li>
-							<li>Wikipedia Api</li>
-							<li>Weather  Api</li>
-							<li>Quote Machine</li>
+							<li><a href="https://codepen.io/pawelkleczek/full/oZvzGL/" target="_blank">Twitch TV Api</a> </li>
+							<li><a href="https://codepen.io/pawelkleczek/full/XpLZOq/" target="_blank">Wikipedia Api</a></li>
+							<li><a href="https://codepen.io/pawelkleczek/full/WGPRGw/" target="_blank">Weather Api</a></li>
+							<li><a href="https://codepen.io/pawelkleczek/full/bwjRmz/" target="_blank">Quote Machine</a></li>
 						</ul>
 					</div>
+				</div>
+				<div class="col-6 skills">
 					<div class="more-info">
 						<div class="skill-header">
                     		<i class="fa fa-terminal" aria-hidden="true"></i>
@@ -88,7 +88,9 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-6 skills">
+				<div class="col-2">
+				</div>
+				<div class="col-4 skills">
 					<div class="more-info">
 						<div class="skill-header">
 	                	    <i class="fa fa-grav" aria-hidden="true"></i>
@@ -101,6 +103,8 @@
 							<li>UI/UX</li>
 						</ul>
 					</div>
+				</div>
+				<div class="col-6 skills">
 					<div class="more-info">
 						<div class="skill-header">
 							<i class="fa fa-graduation-cap" aria-hidden="true"></i>
@@ -129,13 +133,43 @@
                 <div class='col-2'>
                 </div>
                 <div class='col-8'>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-                </div>
-                <div class='col-2'>
-                </div>
-            </div>
-
+						<h2><span>&lt;</span>Work Experience<span>/&gt;</span></h2>
+				</div>
+			</div>
+			<div class="stol">
+				<div class="col-2"></div>
+				<div class="col-8">
+					<ul>
+                    	<li>Freelance musician
+							<ul>
+								<li>2014-2016</li>
+								<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+							</ul>
+						</li>
+						<li>Manager &amp; guitar teacher
+							<ul>
+								<li>at gryfomania.pl &amp; wsmr.pl</li>
+								<li>2011-2014</li>
+								<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+							</ul>
+						</li>
+						<li>Guitar teacher
+							<ul>
+								<li>at szkola-muzyki.pl</li>
+								<li>2009-2011</li>
+								<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+							</ul>
+						</li>
+						<li>Data administrator
+							<ul>
+								<li>at Procter &amp; Gamble</li>
+								<li>2008-2009</li>
+								<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+							</ul>
+						</li>
+                    </ul>
+				</div>
+			</div>
         </footer>
     </div>
 </body>
