First version of my CV done

--- a/index.html
+++ b/index.html
@@ -139,34 +139,39 @@
 			<div class="stol">
 				<div class="col-2"></div>
 				<div class="col-8">
+
 					<ul>
                     	<li>Freelance musician
 							<ul>
 								<li>2014-2016</li>
-								<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+								<li>Playing in numerous music projects, teaching a private group of students.</li>
 							</ul>
 						</li>
+
 						<li>Manager &amp; guitar teacher
 							<ul>
-								<li>at gryfomania.pl &amp; wsmr.pl</li>
+								<li>at gryfomania.pl &amp; ukuleleschool.pl</li>
 								<li>2011-2014</li>
-								<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+								<li>Leading own music schools, employing other teachers, taking care of the websites, but also teaching guitar and music theory.</li>
 							</ul>
 						</li>
+
 						<li>Guitar teacher
 							<ul>
 								<li>at szkola-muzyki.pl</li>
 								<li>2009-2011</li>
-								<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+								<li>Teaching guitar in one of the most popular spots in Warsaw. Teaching foreign students in English.</li>
 							</ul>
 						</li>
+
 						<li>Data administrator
 							<ul>
 								<li>at Procter &amp; Gamble</li>
 								<li>2008-2009</li>
-								<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+								<li>Data administration for a line of P&amp;G products. Work mainly in Excel and SAS, both in Polish and English.</li>
 							</ul>
 						</li>
+
                     </ul>
 				</div>
 			</div>
