--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
     <div class='baba_z_radomia'>
         <header>
             <div class='stol'>
-				<div class="col-2">
-				</div>
-	                <div class='col-6'>
-	                    <h1><span>&lt;</span>Paweł Kłeczek <span>/&gt;</span></h1>
-	                </div>
-					<div class="col-4">
-						<h2>front-end developer</h2>
-					</div>
+                <div class="col-2">
+                </div>
+                <div class='col-6'>
+                    <h1><span>&lt;</span>Paweł Kłeczek <span>/&gt;</span></h1>
+                </div>
+                <div class="col-4">
+                    <h2>front-end developer</h2>
+                </div>
             </div>
         </header>
-
         <main>
             <div class='stol'>
                 <div class='col-2'>
@@ -57,75 +56,74 @@
                 </div>
             </div>
             <div class="stol">
-				<div class="col-2">
-				</div>
-                <div class="col-4 skills">
-					<div class="more-info">
-						<div class="skill-header">
-							<i class="fa fa-connectdevelop" aria-hidden="true"></i>
-                    		<h2>Projects</h2>
-						</div>
-						<ul>
-							<li><a href="https://codepen.io/pawelkleczek/full/oZvzGL/" target="_blank">Twitch TV Api</a> </li>
-							<li><a href="https://codepen.io/pawelkleczek/full/XpLZOq/" target="_blank">Wikipedia Api</a></li>
-							<li><a href="https://codepen.io/pawelkleczek/full/WGPRGw/" target="_blank">Weather Api</a></li>
-							<li><a href="https://codepen.io/pawelkleczek/full/bwjRmz/" target="_blank">Quote Machine</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-6 skills">
-					<div class="more-info">
-						<div class="skill-header">
-                    		<i class="fa fa-terminal" aria-hidden="true"></i>
-                    		<h2>Skills</h2>
-						</div>
-						<ul>
-							<li>HTML5</li>
-							<li>CSS3</li>
-							<li>Js (ES6)</li>
-							<li>Sass</li>
-							<li>React</li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-2">
-				</div>
-				<div class="col-4 skills">
-					<div class="more-info">
-						<div class="skill-header">
-	                	    <i class="fa fa-grav" aria-hidden="true"></i>
-	                	    <h2>Expertise</h2>
-						</div>
-						<ul>
-							<li>RWD</li>
-							<li>API</li>
-							<li>RegEx</li>
-							<li>UI/UX</li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-6 skills">
-					<div class="more-info">
-						<div class="skill-header">
-							<i class="fa fa-graduation-cap" aria-hidden="true"></i>
-	                	    <h2>Education</h2>
-						</div>
-						<ul>
-							<li>CodersLab
-								<ul>
-							<li>Front-End Dev 2017</li>
-								</ul>
-							</li>
-							<li></li>
-							<li>Music Academy in Katowice
-								<ul>
-							<li>Jazz Guitar MD 2010</li>
-								</ul>
-							</li>
-						</ul>
-					</div>
+                <div class="col-2">
                 </div>
-
+                <div class="col-4 skills">
+                    <div class="more-info">
+                        <div class="skill-header">
+                            <i class="fa fa-connectdevelop" aria-hidden="true"></i>
+                            <h2>Projects</h2>
+                        </div>
+                        <ul>
+                            <li><a href="https://codepen.io/pawelkleczek/full/oZvzGL/" target="_blank">Twitch TV Api</a> </li>
+                            <li><a href="https://codepen.io/pawelkleczek/full/XpLZOq/" target="_blank">Wikipedia Api</a></li>
+                            <li><a href="https://codepen.io/pawelkleczek/full/WGPRGw/" target="_blank">Weather Api</a></li>
+                            <li><a href="https://codepen.io/pawelkleczek/full/bwjRmz/" target="_blank">Quote Machine</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-6 skills">
+                    <div class="more-info">
+                        <div class="skill-header">
+                            <i class="fa fa-terminal" aria-hidden="true"></i>
+                            <h2>Skills</h2>
+                        </div>
+                        <ul>
+                            <li>HTML5</li>
+                            <li>CSS3</li>
+                            <li>Js (ES6)</li>
+                            <li>Sass</li>
+                            <li>React</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-2">
+                </div>
+                <div class="col-4 skills">
+                    <div class="more-info">
+                        <div class="skill-header">
+                            <i class="fa fa-grav" aria-hidden="true"></i>
+                            <h2>Expertise</h2>
+                        </div>
+                        <ul>
+                            <li>RWD</li>
+                            <li>API</li>
+                            <li>RegEx</li>
+                            <li>UI/UX</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-6 skills">
+                    <div class="more-info">
+                        <div class="skill-header">
+                            <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                            <h2>Education</h2>
+                        </div>
+                        <ul>
+                            <li>CodersLab
+                                <ul>
+                                    <li>Front-End Dev 2017</li>
+                                </ul>
+                            </li>
+                            <li></li>
+                            <li>Music Academy in Katowice
+                                <ul>
+                                    <li>Jazz Guitar MD 2010</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </main>
         <footer>
@@ -133,50 +131,47 @@
                 <div class='col-2'>
                 </div>
                 <div class='col-8'>
-						<h2><span>&lt;</span>Work Experience<span>/&gt;</span></h2>
-				</div>
-			</div>
-			<div class="stol">
-				<div class="col-2"></div>
-				<div class="col-8">
+                    <h2><span>&lt;</span>Work Experience<span>/&gt;</span></h2>
+                </div>
+            </div>
+            <div class="stol">
+                <div class="col-2"></div>
+                <div class="col-8">
+                    <ul>
+                        <li>Freelance musician
+                            <ul>
+                                <li>2014-2016</li>
+                                <li>Playing in numerous music projects, teaching a private group of students.</li>
+                            </ul>
+                        </li>
 
-					<ul>
-                    	<li>Freelance musician
-							<ul>
-								<li>2014-2016</li>
-								<li>Playing in numerous music projects, teaching a private group of students.</li>
-							</ul>
-						</li>
+                        <li>Manager &amp; guitar teacher
+                            <ul>
+                                <li>at gryfomania.pl &amp; ukuleleschool.pl</li>
+                                <li>2011-2014</li>
+                                <li>Leading own music schools, employing other teachers, taking care of the websites, but also teaching guitar and music theory.</li>
+                            </ul>
+                        </li>
 
-						<li>Manager &amp; guitar teacher
-							<ul>
-								<li>at gryfomania.pl &amp; ukuleleschool.pl</li>
-								<li>2011-2014</li>
-								<li>Leading own music schools, employing other teachers, taking care of the websites, but also teaching guitar and music theory.</li>
-							</ul>
-						</li>
+                        <li>Guitar teacher
+                            <ul>
+                                <li>at szkola-muzyki.pl</li>
+                                <li>2009-2011</li>
+                                <li>Teaching guitar in one of the most popular spots in Warsaw. Teaching foreign students in English.</li>
+                            </ul>
+                        </li>
 
-						<li>Guitar teacher
-							<ul>
-								<li>at szkola-muzyki.pl</li>
-								<li>2009-2011</li>
-								<li>Teaching guitar in one of the most popular spots in Warsaw. Teaching foreign students in English.</li>
-							</ul>
-						</li>
-
-						<li>Data administrator
-							<ul>
-								<li>at Procter &amp; Gamble</li>
-								<li>2008-2009</li>
-								<li>Data administration for a line of P&amp;G products. Work mainly in Excel and SAS, both in Polish and English.</li>
-							</ul>
-						</li>
-
+                        <li>Data administrator
+                            <ul>
+                                <li>at Procter &amp; Gamble</li>
+                                <li>2008-2009</li>
+                                <li>Data administration for a line of P&amp;G products. Work mainly in Excel and SAP, both in Polish and English.</li>
+                            </ul>
+                        </li>
                     </ul>
-				</div>
-			</div>
+                </div>
+            </div>
         </footer>
     </div>
 </body>
-
 </html>
