Testing media print feature

--- a/index.html
+++ b/index.html
@@ -166,11 +166,14 @@
                     </ul>
                 </div>
             </div>
+			<div class='row'>
+				<div class='col-2'>
+				</div>
+				<div class='col-8'>
+					<p class='agreement'>Wyrażam zgodę na przetwarzanie moich danych osobowych dla potrzeb niezbędnych do realizacji procesu rekrutacji (zgodnie z Ustawą z dnia 29.08.1997 roku o Ochronie Danych Osobowych; tekst jednolity: Dz. U. 2016 r. poz. 922).</p>
+				</div>
+			</div>
         </footer>
     </div>
 </body>
 </html>
-
-<!--
-Wyrażam zgodę na przetwarzanie moich danych osobowych dla potrzeb niezbędnych do realizacji procesu rekrutacji (zgodnie z Ustawą z dnia 29.08.1997 roku o Ochronie Danych Osobowych; tekst jednolity: Dz. U. 2016 r. poz. 922).
--->
