--- a/index.html
+++ b/index.html
@@ -14,107 +14,104 @@
     <div class='container'>
         <header class='header'>
             <div class='row'>
-                <div class="col-2">
+                <div class='col-2 col-pr-1'>
                 </div>
-                <div class='col-5 logo'>
-                    <h1 class='logo__header'><span class='logo__element'>&lt;</span class='logo__text'>Paweł Kłeczek <span class='logo__element'>/&gt;</span></h1>
+                <div class='col-4 col-pr-10'>
+                    <h1 class='logo'><span class='logo__element'>&lt;</span class='logo__text'>Paweł Kłeczek <span class='logo__element'>/&gt;</span></h1>
                 </div>
-                <div class="col-4">
-                    <h2 class='header__conditional-title'>front-end developer</h2>
+                <div class='col-6'>
+                    <h2 class='element_conditional'>front-end developer</h2>
                 </div>
             </div>
         </header>
         <main class='main'>
-            <div class='row contact'>
-                <div class='col-2'>
+            <div class='row'>
+                <div class='col-2 col-pr-1'>
                 </div>
-                <div class='col-4'>
-                    <div class="contact__item">
-                        <i class='fa fa-map-marker contact__icon' aria-hidden='true'></i> <span class="contact__text">Warsaw,PL</span>
+                <div class='col-4 col-pr-5'>
+                    <div class='contact-info'>
+                        <i class='fa fa-map-marker contact-info__icon' aria-hidden='true'></i> <span class='contact-info__text'>Warsaw,PL</span>
                     </div>
-                    <div class="contact__item">
-                        <i class='fa fa-mobile contact__icon' aria-hidden='true'></i>
-                        <span class="contact__text">502631476</span>
+                    <div class='contact-info'>
+                        <i class='fa fa-mobile contact-info__icon' aria-hidden='true'></i>
+                        <span class='contact-info__text'>502631476</span>
                     </div>
-                    <div class="contact__item">
-                        <i class='fa fa-google contact__icon' aria-hidden='true'></i>
-                        <span class="contact__text"><a class="contact__link" href="mailto:pa.vel.kleczek@gmail.com?Subject=Praca%20front-end" target="_top">pa.vel.kleczek@</a></span>
+                    <div class='contact-info'>
+                        <i class='fa fa-google contact-info__icon' aria-hidden='true'></i>
+                        <span class='contact-info__text'><a class='contact-info__link' href='mailto:pa.vel.kleczek@gmail.com?Subject=Praca%20front-end' target='_top'>pa.vel.kleczek@</a></span>
                     </div>
                 </div>
-                <div class="col-4">
-                    <div class="contact__item">
-                        <i class='fa fa-facebook-official contact__icon' aria-hidden='true'></i> <span class="contact__text"><a class="contact__link" href='https://www.facebook.com/pa.vel.kleczek' target='blank'>/pa.vel.kleczek</a></span>
+                <div class='col-4 col-pr-5'>
+                    <div class='contact-info'>
+                        <i class='fa fa-facebook-official contact-info__icon' aria-hidden='true'></i> <span class='contact-info__text'><a class='contact-info__link' href='https://www.facebook.com/pa.vel.kleczek' target='blank'>/pa.vel.kleczek</a></span>
                     </div>
-                    <div class="contact__item">
-                        <i class='fa fa-github contact__icon' aria-hidden='true'></i>
-                        <span class="contact__text"><a class="contact__link" href='https://github.com/pawelkleczek' target='blank'>/pawelkleczek</a></span>
+                    <div class='contact-info'>
+                        <i class='fa fa-github contact-info__icon' aria-hidden='true'></i>
+                        <span class='contact-info__text'><a class='contact-info__link' href='https://github.com/pawelkleczek' target='blank'>/pawelkleczek</a></span>
                     </div>
-                    <div class="contact__item">
-                        <i class="fa fa-linkedin contact__icon" aria-hidden="true"></i>
-                        <span class="contact__text"><a class="contact__link" href='https://www.linkedin.com/in/pawelkleczek/' target='blank'>/in/pawelkleczek</a></span>
+                    <div class='contact-info'>
+                        <i class='fa fa-linkedin contact-info__icon' aria-hidden='true'></i>
+                        <span class='contact-info__text'><a class='contact-info__link' href='https://www.linkedin.com/in/pawelkleczek/' target='blank'>/in/pawelkleczek</a></span>
                     </div>
                 </div>
             </div>
-            <div class="row info">
-                <div class="col-2">
+            <div class='row infos'>
+                <div class='col-2 col-pr-1'>
                 </div>
-                <div class="col-4 info-box">
-                        <div class="info-box__header">
-                            <i class="fa fa-connectdevelop info-box__icon" aria-hidden="true"></i>
-                            <h2 class="info-box__text">Projects</h2>
+                <div class='col-4 col-pr-5 info-box'>
+                        <div class='info-box__header'>
+                            <i class='fa fa-connectdevelop info-box__icon' aria-hidden='true'></i>
+                            <h2 class='info-box__text'>Projects</h2>
                         </div>
-                        <ul class="info-box__list">
-                            <li class="info-box__item"><a class="info-box__link" href="https://codepen.io/pawelkleczek/full/oZvzGL/" target="_blank">Twitch TV Api</a> </li>
-                            <li class="info-box__item"><a class="info-box__link" href="https://codepen.io/pawelkleczek/full/XpLZOq/" target="_blank">Wikipedia Api</a></li>
-                            <li class="info-box__item"><a class="info-box__link" href="https://codepen.io/pawelkleczek/full/WGPRGw/" target="_blank">Weather Api</a></li>
-                            <li class="info-box__item"><a class="info-box__link" href="https://codepen.io/pawelkleczek/full/bwjRmz/" target="_blank">Quote Machine</a></li>
+                        <ul class='info-box__list'>
+                            <li class='info-box__item'><a class='info-box__link' href='https://codepen.io/pawelkleczek/full/oZvzGL/' target='_blank'>Twitch TV Api</a> </li>
+                            <li class='info-box__item'><a class='info-box__link' href='https://codepen.io/pawelkleczek/full/XpLZOq/' target='_blank'>Wikipedia Api</a></li>
+                            <li class='info-box__item'><a class='info-box__link' href='https://codepen.io/pawelkleczek/full/WGPRGw/' target='_blank'>Weather Api</a></li>
+                            <li class='info-box__item'><a class='info-box__link' href='https://codepen.io/pawelkleczek/full/bwjRmz/' target='_blank'>Quote Machine</a></li>
                         </ul>
                 </div>
-                <div class="col-4 info-box">
-                        <div class="info-box__header">
-                            <i class="fa fa-terminal info-box__icon" aria-hidden="true"></i>
-                            <h2 class="info-box__text">Skills</h2>
+                <div class='col-6 col-pr-6 info-box'>
+                        <div class='info-box__header'>
+                            <i class='fa fa-terminal info-box__icon' aria-hidden='true'></i>
+                            <h2 class='info-box__text'>Skills</h2>
                         </div>
-                        <ul class="info-box__list">
-                            <li class="info-box__item">HTML5</li>
-                            <li class="info-box__item">CSS3 &amp; RWD</li>
-                            <li class="info-box__item">Sass</li>
-                            <li class="info-box__item">JavaScript &amp; jQuery</li>
-							<li class="info-box__item">ES6</li>
-							<li class="info-box__item">React</li>
+                        <ul class='info-box__list'>
+                            <li class='info-box__item'>HTML5 &amp; RWD</li>
+                            <li class='info-box__item'>CSS3 &amp; Sass</li>
+                            <li class='info-box__item'>JavaScript &amp; jQuery</li>
+							<li class='info-box__item'>ES6 &amp; React</li>
                         </ul>
                 </div>
 			</div>
-			<div class="row info">
-                <div class="col-2">
+			<div class='row infos'>
+                <div class='col-2 col-pr-1'>
                 </div>
-                <div class="col-4 info-box">
-                        <div class="info-box__header">
-                            <i class="fa fa-grav info-box__icon" aria-hidden="true"></i>
-                            <h2 class="info-box__text">Tools</h2>
+                <div class='col-4 col-pr-5 info-box'>
+                        <div class='info-box__header'>
+                            <i class='fa fa-grav info-box__icon' aria-hidden='true'></i>
+                            <h2 class='info-box__text'>Tools</h2>
                         </div>
-                        <ul class="info-box__list">
-                            <li class="info-box__item">Terminal</li>
-                            <li class="info-box__item">Git</li>
-                            <li class="info-box__item">Gulp</li>
-                            <li class="info-box__item">Webpack</li>
-							<li class="info-box__item">Node</li>
+                        <ul class='info-box__list'>
+                            <li class='info-box__item'>Terminal</li>
+                            <li class='info-box__item'>Git</li>
+                            <li class='info-box__item'>Gulp &amp; Webpack</li>
+							<li class='info-box__item'>Node</li>
                         </ul>
                 </div>
-                <div class="col-4 info-box">
-                        <div class="info-box__header">
-                            <i class="fa fa-graduation-cap info-box__icon" aria-hidden="true"></i>
-                            <h2 class="info-box__text">Education</h2>
+                <div class='col-6 col-pr-6 info-box'>
+                        <div class='info-box__header'>
+                            <i class='fa fa-graduation-cap info-box__icon' aria-hidden='true'></i>
+                            <h2 class='info-box__text'>Education</h2>
                         </div>
-                        <ul class="info-box__list">
-                            <li class="info-box__item">CodersLab
-                                <ul class="info-box__list">
-                                    <li class="info-box__item">Front-End Dev 2017</li>
+                        <ul class='info-box__list'>
+                            <li class='info-box__item'>CodersLab
+                                <ul class='info-box__list'>
+                                    <li class='info-box__item'>Front-End Dev 2017</li>
                                 </ul>
                             </li>
-                            <li class="info-box__item">Music Academy in Katowice
-                                <ul class="info-box__list">
-                                    <li class="info-box__item">Jazz Guitar MD 2010</li>
+                            <li class='info-box__item'>Music Academy in Katowice
+                                <ul class='info-box__list'>
+                                    <li class='info-box__item'>Jazz Guitar MD 2010</li>
                                 </ul>
                             </li>
                         </ul>
@@ -123,53 +120,53 @@
         </main>
         <footer class='footer'>
             <div class='row'>
-                <div class='col-2'>
+                <div class='col-2 col-pr-1'>
                 </div>
-                <div class='col-8 logo'>
-                    <h2 class='logo__header'><span class='logo__element'>&lt;</span class='logo__text'>Work Experience<span class='logo__element'>/&gt;</span></h2>
+                <div class='col-8 col-pr-10'>
+                    <h2 class='logo'><span class='logo__element'>&lt;</span class='logo__text'>Work Experience<span class='logo__element'>/&gt;</span></h2>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-2"></div>
-                <div class="col-8 experience">
-                    <ul class="list">
-                        <li class="list__item">Freelance musician
-                            <ul class="list">
-                                <li class="list__item">2014-2016</li>
-                                <li class="list__item">Playing in numerous music projects, teaching a private group of students.</li>
+            <div class='row'>
+                <div class='col-2 col-pr-1'></div>
+                <div class='col-8  col-pr-10 experience'>
+                    <ul class='list'>
+                        <li class='list__item'>Freelance musician
+                            <ul class='list'>
+                                <li class='list__item'>2014-2016</li>
+                                <li class='list__item'>Playing in numerous music projects, teaching a private group of students.</li>
                             </ul>
                         </li>
 
-                        <li class="list__item">Manager &amp; guitar teacher
-                            <ul class="list">
-                                <li class="list__item">at gryfomania.pl &amp; ukuleleschool.pl</li>
-                                <li class="list__item">2011-2014</li>
-                                <li class="list__item">Leading own music schools, employing other teachers, taking care of the websites, but also teaching guitar and music theory.</li>
+                        <li class='list__item'>Manager &amp; guitar teacher
+                            <ul class='list'>
+                                <li class='list__item'>at gryfomania.pl &amp; ukuleleschool.pl</li>
+                                <li class='list__item'>2011-2014</li>
+                                <li class='list__item'>Leading own music schools, employing other teachers, taking care of the websites, but also teaching guitar and music theory.</li>
                             </ul>
                         </li>
 
-                        <li class="list__item">Guitar teacher
-                            <ul class="list">
-                                <li class="list__item">at szkola-muzyki.pl</li>
-                                <li class="list__item">2009-2011</li>
-                                <li class="list__item">Teaching guitar in one of the most popular spots in Warsaw. Teaching foreign students in English.</li>
+                        <li class='list__item'>Guitar teacher
+                            <ul class='list'>
+                                <li class='list__item'>at szkola-muzyki.pl</li>
+                                <li class='list__item'>2009-2011</li>
+                                <li class='list__item'>Teaching guitar in one of the most popular spots in Warsaw. Teaching foreign students in English.</li>
                             </ul>
                         </li>
 
-                        <li class="list__item">Data administrator
-                            <ul class="list">
-                                <li class="list__item">at Procter &amp; Gamble</li>
-                                <li class="list__item">2008-2009</li>
-                                <li class="list__item">Data administration for a line of P&amp;G products. Work mainly in Excel and SAP, both in Polish and English.</li>
+                        <li class='list__item'>Data administrator
+                            <ul class='list'>
+                                <li class='list__item'>at Procter &amp; Gamble</li>
+                                <li class='list__item'>2008-2009</li>
+                                <li class='list__item'>Data administration for a line of P&amp;G products. Work mainly in Excel and SAP, both in Polish and English.</li>
                             </ul>
                         </li>
                     </ul>
                 </div>
             </div>
 			<div class='row'>
-				<div class='col-2'>
+				<div class='col-2 col-pr-1'>
 				</div>
-				<div class='col-8'>
+				<div class='col-8 col-pr-10'>
 					<p class='agreement'>Wyrażam zgodę na przetwarzanie moich danych osobowych dla potrzeb niezbędnych do realizacji procesu rekrutacji (zgodnie z Ustawą z dnia 29.08.1997 roku o Ochronie Danych Osobowych; tekst jednolity: Dz. U. 2016 r. poz. 922).</p>
 				</div>
 			</div>
